[package]
name = "luna"
version = "0.1.0"
authors = ["Severen Redwood <severen@shrike.me>"]
description = "An interpreter for the Scheme programming language."
license = "GPL-3.0"

readme = "README.md"
repository = "https://github.com/severen/luna.git"

edition = "2021"

[lib]
name = "luna"
path = "src/lib.rs"

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
clap = { version = "4.0.8", features = ["derive", "unicode", "wrap_help"] }
rustyline = "10.0.0"
directories-next = "2.0.0"
logos = "0.12.1"

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["display"]
